# guardians_of_the_token

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml
guardians_of_the_token/: __init__.py  cli.py  config.py  dashboard.html  dashboard.py  embeddings.py  estimate.py  events.py  guard.py  mcp_server.py  messages.py  proxy.py  report.py  status.py  telemetry.py  test_server.py  test_support.py  transcript.py  update.py  utils.py
guardians_of_the_token/claude/: __init__.py  cap_output.py  macos_dialog.py  post_tool_guard.py  pre_tool_guard.py  prompt_guard.py  session_start.py
guardians_of_the_token/claude/skills/got-unblock/: SKILL.md
guardians_of_the_token/codex/: __init__.py  post_tool_guard.py  pre_tool_guard.py
tests/: conftest.py  test_cli.py  test_estimate.py  test_hooks.py  test_mcp_server.py  test_messages.py  test_policy_report.py  test_prompt_guard.py  test_status.py  test_telemetry.py  test_update.py
